<resources>
    <string name="app_name">Convocation IITR</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="tab_text_home">Home</string>
    <string name="tab_text_dress_code">Dress Code</string>
    <string name="tab_text_accommodation">Accommodation</string>
    <string name="tab_text_schedule">Important Dates</string>
    <string name="tab_text_min">Minute To Minute</string>
    <string name="tab_text_degrees">Degrees</string>
    <string name="tab_text_medals">Medals</string>
    <string name="tab_text_gallery">Gallery</string>
    <string name="tab_text_livecast">Livecast</string>
    <string name="tab_text_instructions">Instructions</string>
    <string name="tab_text_contact">Contact us</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="action_maps">Maps</string>
    <string name="action_feedback">Feedback</string>
    <string name="B.Tech">UG</string>
    <string name="mTech">PG</string>
    <string name="phd">Ph.D.</string>
    <string name="management">Management</string>
    <string name="name">Name</string>
    <string name="enrollment">Enrollment No.</string>
    <string name="time">Time</string>
    <string name="inst_medals">Institute Level</string>
    <string name="dept_medals">Department Level</string>
    <string name="reporting_time">Reporting Time</string>
    <string name="reporting_time_text">All students are requested to arrive at 6th October 2018 by 2:30 P.M. for ease in further processes.</string>
    <string name="additional_information">Additional Information</string>
    <string name="additional_information_text">All students are requested to arrive at 6th October 2018 by 2:30 P.M. for ease in further processes.</string>
    <string name="female">Female</string>
    <string name="male">Male</string>
    <string name="male_dress_name">Kurta</string>
    <string name="female_dress_name">Saree</string>
    <string name="female_dress_name_2">Blouse</string>
    <string name="female_dress_description_1">Girls will wear SAREE in Off white Colour.Girls may use heel sandals.</string>
    <string name="female_dress_description_1_1">Peticot of off white colour is to be arranged by girls.</string>
    <string name="female_dress_description_2">Off white colour blouse.</string>
    <string name="female_dress_description_3">Girls will have to get it stitched themselves using design of neck and sleeves.</string>
    <string name="female_dress_description_4">No embroidery on blouse.</string>
    <string name="male_dress_description_1">Boys will wear knee length KURTA in off-white colour with white colour chudidar pyjama.</string>
    <string name="male_dress_description_2">Boys can use leather chappals.</string>
    <string name="male_dress_description_3">Boys will have to get chudidar pyjama stitched themselves in white colour.</string>
    <string name="dummy_text">Lorem Ipsum is simply dummy text\nof the printing and typesetting industry.</string>
    <string name="instructions_details_note_text">NOTE : WEBSITE CONTENT SHALL BE LOOKED FOR MORE INFORMATION\n\nNOTE : Students need to check website for update on registration data regarding attending convocation 2018 in person.</string>

    <string name="profile">Profile</string>
    <string name="enrolment_no">Enrolment No.:</string>
    <string name="dept">Department:</string>
    <string name="transactionId">Bank Transaction ID</string>

    <string name="chief_guests">Chief Guests</string>
    <string name="social_links">Social Links</string>
    <string name="maps">Maps</string>
    <string name="feedback">Feedback</string>
    <string name="name_and_locaton_of_all_the_nearby_hotels_and_guest_houses_are_there_in_the_pdf_which_can_be_downloaded_from_below_link">Name and locaton of all the nearby hotels and guest houses are there in the pdf which can be downloaded from below link.</string>
    <string name="mobile">Mobile</string>

    <string name="Register">Register now</string>
    <string name="registration">Registration</string>
    <string name="basic_details">Basic Details</string>
    <string name="email">E-Mail Id</string>
    <string name="phone">Phone Number</string>
    <string name="bank_transaction">Bank Transaction Id</string>
    <string name="girl_dress">*Girls dresses may include different inputs</string>
    <string name="additional_details">Additional Details</string>
    <string name="address">Permanent Address</string>
    <string name="people_details">People Details</string>
    <string name="number_of_people">(Select number of people coming with you)</string>
    <string name="none">None</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="vehicle_details">Vehicle Details</string>
    <string name="number_of_vehicle">(Select number of vehicle coming with you)</string>
    <string name="terms">Terms &amp; Conditions</string>
    <string name="termsAndCondition">I agree to all terms and conditions.</string>
    <string name="submit">Submit</string>

    <string name="transaction_id_pattern">DUXXXXXXXX</string>

    <string name="preference_file_key">convo_shared_pref</string>
    <string name="token_identifier">registration_token</string>
    <string name="user_profile_image_identifier">profile_image</string>
    <string name="is_registered_identifier">is_registered_flag</string>

    <string name="default_notification_channel_id">default_channel</string>

    <string name="instructions_eligibility_title">Eligibility for Convocation</string>
    <string name="instructions_eligibility_body">All those students of UG (B.Tech./B.Arch./IDD/IMT/IMS), PG (M.Sc./M.Tech./MURP/M.Arch.) and Ph.D. programme who have completed their respective degree requirements by <b>September 23, 2018</b> will be awarded degree in Convocation 2018.</string>

    <string name="instructions_attending_title">Instructions for attending convocation</string>
    <string name="instructions_attending_body">Convocation will be held on two successive days i.e.<b>October 06, 2018</b> and <b>October 07, 2018</b> , separately for UG(B.Tech/B.Arch/IDD/IMT/IMS)and PG(M.Sc./M.Tech./M.Arch./MURP)/Ph.D. students respectively. All those students of UG, PG and Ph.D. programme who have completed the degree requirements by <b>September 23, 2018</b> will be awarded degree in Convocation 2018.\nKindly read these instructions before filling the registration form. You are expected to abide by the given instructions before and during the Convocation 2018. Kindly visit Convocation website on or after September 01, 2018 to register for Convocation 2018 .</string>

    <string name="instructions_registration_title">Registration</string>
    <string name="instructions_registration_body">Each student has to register online to attend Convocation 2018 . The online registration portal will become live on <b>September 01, 2018</b> and will close on <b>September 25, 2018 midnight</b> . You can access registration portal by clicking at ‘Register Here’ under Registration head. You will not be able to submit the form until convocation fee has been paid and its transaction ID is inserted in the registration form. Those who have successfully registered will be included in the list of degree recipients. Online registration is mandatory and any student who does not complete the online registration will not be allowed to attend the Convocation even if he/she physically reports for the same.\n\n<b>The number of seats in the Convocation Hall are limited. If the number of parents exceeds the number of seats available for parents, the additional parents can watch the live Proceedings of the Convocation from the Lecture Hall Complex</b></string>

    <string name="instructions_fees_title">Convocation Fee</string>
    <string name="instructions_fees_body">The students, who are desirous to attend Convocation 2018 , will have to pay online <b>Rs 1500/-(Rupees Fifteen Hundred only)</b>. Use <b>SBI Collect (State Bank Collect)</b> for the payment as done for online fee deposit. The head for payment will be \'Convocation 2018'.</string>

    <string name="instructions_mandatory_title">Mandatory</string>
    <string name="instructions_mandatory_body">
        1. All UG students are expected to reach institute latest by <b>October 05, 2018</b> morning. All PG/Ph.D. students are expected to reach institute latest by <b>October 06, 2018</b> morning.
        \n2. The student has to contact Convocation Reporting desk at DoMS to ensure that her/his name is there in the list. The student will be verified and given token to collect Convocation Kit.
        \n3. If student has not contacted at Convocation Reporting desk latest by <b>12.00 noon</b> on the designated day then the respective name will be removed from the list of degree recipients irrespective of that the student has already registered and paid the convocation fee.
        \n4. Convocation dress (Saree / Kurta as per size) and Anagvastra shall be collected at the time of reporting from the reporting desk. Boys have to get chudidar pyzama stitched by themselves and girls have to arrange for blouse and peticot by themselves.
        \n5. Kindly note that there will not be any On-The-Spot Registration for convocation on <b>October 04-06, 2018</b> for UG students and on <b>October 05-07, 2018</b> for PG/PhD students.
        \n6. Once confirmed, these students have to take part in Full dress rehearsal on the same day in the afternoon. If you are not present during the dress rehearsal than your name will be removed from the list of degree recipients. You can use any dress other than convocation dress at this time.
        \n7. All the students have to report at convocation hall on the day of convocation <b>(October 06 / 07)</b> with the defined dress code at the designated time
        \n8. It is expected from the students that they will maintain decorum of the convocation ceremony. They will follow the instructions that will be given from time to time. They will occupy their designated seats well before time and will remain seated in the convocation hall throughout the proceedings of the ceremony.
    </string>

    <string name="instructions_mandatory_note">NOTE: The institute will try its best to accommodate the parents of the degree recipients in the convocation hall subject to the number of seats available, number of student registrations and expected guests who may attend the convocation. The institute looks forward to your cooperation in this regard.</string>

</resources>
