<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".RegisterActivity">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/appbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/gradient_no_radius"
        android:padding="@dimen/appbar_padding_top"
        android:theme="@style/ToolbarStyle">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar_register"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:layout_weight="1"
            app:collapseIcon="@drawable/ic_navigate_before_black_24dp"
            app:layout_scrollFlags="scroll|enterAlways"
            app:popupTheme="@style/ToolbarStyle"
            app:titleTextAppearance="@style/BoldText">

            <ImageButton
                android:id="@+id/back_button_register"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent" />

            <TextView
                android:id="@+id/registration"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:textColor="#ffffff"
                android:textSize="20sp"
                android:fontFamily="@font/metropolis_semibold"/>

        </android.support.v7.widget.Toolbar>

    </android.support.design.widget.AppBarLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="25dp"
            tools:ignore="RtlCompat">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:textColor="#262626"
                android:fontFamily="@font/metropolis_semibold"
                android:text="@string/basic_details"
                android:layout_marginTop="20dp"/>

            <android.support.v7.widget.AppCompatEditText
                android:id="@+id/register_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:hint="@string/name"
                android:textColorHint="#afafaf"
                android:inputType="textPersonName"/>


            <android.support.v7.widget.AppCompatEditText
                android:id="@+id/register_enrollment"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="28dp"
                android:hint="@string/enrollment"
                android:textColorHint="#afafaf"
                android:inputType="number"/>


            <android.support.v7.widget.AppCompatEditText
                android:id="@+id/register_email1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="28dp"
                android:hint="@string/email"
                android:textColorHint="#afafaf"
                android:inputType="textEmailAddress"/>


            <android.support.v7.widget.AppCompatEditText
                android:id="@+id/register_phone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="28dp"
                android:hint="@string/phone"
                android:textColorHint="#afafaf"
                android:inputType="number"/>


            <android.support.v7.widget.AppCompatEditText
                android:id="@+id/register_bankTransactionId"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="28dp"
                android:hint="@string/bank_transaction"
                android:textColorHint="#afafaf"
                android:inputType="textPhonetic"/>

            <android.support.v7.widget.DropDownListView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="28dp">

            </android.support.v7.widget.DropDownListView>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/metropolis_regular"
                android:textSize="12sp"
                android:textColor="#737373"
                android:lineSpacingExtra="8sp"
                android:text="@string/girl_dress"
                />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="50dp"
                android:fontFamily="@font/metropolis_semibold"
                android:textSize="16sp"
                android:textColor="#262626"
                android:text="@string/additional_details" />


            <android.support.v7.widget.AppCompatEditText
                android:id="@+id/register_address"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="28dp"
                android:hint="@string/address"
                android:textColorHint="#afafaf"
                android:inputType="textPostalAddress"/>


            <android.support.v7.widget.AppCompatEditText
                android:id="@+id/register_mobile"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="28dp"
                android:hint="@string/mobile"
                android:textColorHint="#afafaf"
                android:inputType="number"/>


            <android.support.v7.widget.AppCompatEditText
                android:id="@+id/register_email2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="28dp"
                android:hint="@string/email"
                android:textColorHint="#afafaf"
                android:inputType="textEmailAddress"/>







        </LinearLayout>
    </ScrollView>

</LinearLayout>
